Show full alarm info
Globally enable full alarm info in quick settings drawer.

Screenshots: https://goo.gl/photos/ycuvZZFD1ssyWu8B6

This detailed info is pretty useful why not enable it for all devices.

Change-Id: I46ccc3547922b6ab5fdcf8798bd5269b7465a92d
Signed-off-by: Sebastian Haderecker <sebastian.haderecker@gmail.com>

--- a/overlay/common/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/common/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -32,5 +32,8 @@
 
     <!-- SystemUIFactory component -->
     <string name="config_systemUIFactoryComponent" translatable="false">com.android.systemui.SlimSystemUIFactory</string>
+
+    <bool name="quick_settings_show_full_alarm">true</bool>
+
 </resources>
 
