--- a/themes/Dark/Settings/res/values/colors.xml
+++ b/themes/Dark/Settings/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="suggestion_tile_background">@*android:color/background_material_dark</color>
     <color name="suggestion_title_text_color">@*android:color/white</color>
     <color name="suggestion_summary_text_color">@*android:color/white</color>
+    <color name="material_grey_300">@*android:color/primary_device_default_dark</color>
 
     <!-- DU Tweaks -->
     <color name="BottomBarBackgroundColor">@*android:color/primary_device_default_dark</color>
