Add font package
Fonts taken from dafont.com and free to use for personal use and not
commercial use.

https://www.dafont.com/

According to 18 USCS § 31, term "used for commercial purposes" means the
carriage of persons or property for any fare, fee, rate, charge or other
consideration, or directly or indirectly in connection with any business,
or other undertaking intended for profit.

https://definitions.uslegal.com/u/used-for-commercial-purposes/

Since DU (Tipsy) is not and will never be a for profit, we're in the clear :-)

- Fonts xml files generated for these font zips thanks to @USA-RedDragon

Change-Id: I1440d6c51ee25c7e465e83b2f4ec5099f03e741d

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -84,5 +84,11 @@
     <string-array name="config_ephemeralResolverPackage">
         <item>com.google.android.gms</item>
     </string-array>
+
+    <!-- System font packages (overlay in vendor) -->
+    <string-array name="config_fontPackages" translatable="false">
+        <item>com.tipsy.fonts</item>
+    </string-array>
+
 </resources>
 
